<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="fragment"
            type="com.coditas.example.ui.login.LoginFragment" />

        <variable
            name="viewModel"
            type="com.coditas.example.ui.login.LoginViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCoditas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_coditas" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/txt_welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/txt_log_in"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_16"
            android:hint="@string/txt_email_address"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/alice_blue"
            app:boxStrokeColor="@color/grey"
            app:hintTextColor="@color/light_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_16"
            android:hint="@string/txt_enter_password"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/alice_blue"
            app:boxStrokeColor="@color/grey"
            app:hintTextColor="@color/light_grey"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/royal_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sp_32">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_btn_login_background"
                android:onClick="@{()->fragment.onClickLogin()}"
                android:onLongClick="@{()->fragment.onLongClickLogin()}"
                android:paddingStart="50dp"
                android:paddingTop="@dimen/dp_10"
                android:paddingEnd="50dp"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/txt_log_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>